--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -9,7 +9,7 @@ packages:
   - erlang@R16B01
 script: |
   sudo apt-get update
-  sudo apt-get install build-essential libncurses5-dev openssl libssl-dev fop xsltproc unixodbc-dev
+  sudo apt-get install build-essential wget libncurses5-dev openssl libssl-dev fop xsltproc unixodbc-dev
   wget http://www.erlang.org/download/otp_src_R16B01.tar.gz
   tar -xzvf otp_src_R16B01.tar.gz
   cd otp_src_R16B01
