--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -1,5 +1,6 @@
 name: erlang
-version: 0.0.1
+version: 0.0.2
+inherits: wercker/ubuntu12.04-chef10.18.2@0.0.8
 type: main
 platform: ubuntu@12.04
 description: box with erlang
