--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -1,19 +1,26 @@
 name: erlang
-version: 0.0.3
+version: 0.0.4
 inherits: wercker/ubuntu12.04-chef10.18.2@0.0.8
 type: main
 platform: ubuntu@12.04
-description: box with erlang
+description: box with erlang and rebar
 keywords:
   - erlang
 packages:
   - erlang@R16B01
 script: |
   sudo apt-get update
-  sudo apt-get install build-essential wget libncurses5-dev openssl libssl-dev fop xsltproc unixodbc-dev
+  sudo apt-get install build-essential wget libncurses5-dev openssl libssl-dev fop xsltproc unixodbc-dev git-core
   wget http://www.erlang.org/download/otp_src_R16B01.tar.gz
   tar -xzvf otp_src_R16B01.tar.gz
   cd otp_src_R16B01
   ./configure && sudo make install
+  cd ..
+  wget https://github.com/basho/rebar/archive/master.zip -O rebar.zip
+  unzip rebar.zip
+  cd rebar-master
+  make
+  sudo mv rebar /bin/
+  cd ..
 env:
   ERLANG_VERSION: "R16B01"
