--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -6,6 +6,7 @@ platform: ubuntu@12.04
 description: box with erlang and rebar
 keywords:
   - erlang
+  - rebar
 packages:
   - erlang@R16B01
 script: |
@@ -15,12 +16,12 @@ script: |
   tar -xzvf otp_src_R16B01.tar.gz
   cd otp_src_R16B01
   ./configure && sudo make install
-  cd ..
+  cd -
   wget https://github.com/basho/rebar/archive/master.zip -O rebar.zip
   unzip rebar.zip
   cd rebar-master
   make
   sudo mv rebar /bin/
-  cd ..
+  cd -
 env:
   ERLANG_VERSION: "R16B01"
